[package]
name = "islec"
version = "0.0.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
publish = false
edition = "2021"
rust-version.workspace = true

[dependencies]
cranelift-isle = { version = "*", path = "../isle/", features = [
  "fancy-errors",
  "logging",
] }
env_logger = "0.11.5"
clap = { version = "4.5.17", features = ["default", "derive"] }
